# model-serving

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  container.py  main.py
app/api/: __init__.py  dependencies.py  errors.py  rest.py  transport.py
app/application/: __init__.py  background.py  inference.py  inference_serving.py  model_control.py  model_serving.py  observability.py  service_lifecycle.py
app/common/: __init__.py  exceptions.py  json_codec.py  tensor_datatypes.py
app/config/: settings.py
app/control_plane/: __init__.py
app/data_plane/: __init__.py
app/domain/: __init__.py  rollback.py
app/observability/: __init__.py  events.py  recorder.py  writer.py
app/schemas/: __init__.py  events.py  model.py  tensor.py  upload.py
client/: thin_client.py
config/: active_models.json
docs/uml/: component_architecture.puml  control_plane_detail.puml  data_plane_detail.puml  deployment.puml  inference_sequence.puml  observability_detail.puml
experiments/classification/: efficientnet-lite4.execution.json
experiments/detection/: yolo26n.execution.json
experiments/measurements/: baseline_daemon.py  baseline_direct.py  mixed_concurrent.py  run_experiment.py  two_model_concurrent.py
experiments/stage6/: baseline_daemon.py  baseline_direct.py  run_experiment.py
experiments/support/: __init__.py  common.py
scripts/: download_artifacts.sh  env.sh  prepare_active_model.sh  run_experiments.sh  run_mixed_concurrent_experiment.sh  run_single_experiment.sh  run_two_model_experiment.sh  start_service.sh  stop_service.sh
(+47 files in other folders)
