[project]
name = "local-tensor-serving"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "litestar==2.14.0",
  "sniffio==1.3.1",
  "uvicorn[standard]==0.34.0",
  "numpy==1.26.4",
  "onnxruntime==1.20.1",
  "psutil==6.1.1",
  "msgspec==0.21.1",
  "requests==2.32.3",
  "Pillow==11.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
